objects/Product_Successor__c.object
<CustomObject>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Successor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product_Successor</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product_Successors (Product_Successor)</relationshipLabel>
        <relationshipName>Product_Successors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product_Successors</relationshipLabel>
        <relationshipName>Product_Successors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Successor_Name__c</fullName>
        <formula>Product_Successor__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successor Name</label>
        <type>Text</type>
    </fields>
    <label>Product_Successor</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Product_Successor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product_Successors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>